--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "swiper": "^11.0.7",
@@ -19,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server db.json ./node_modules/json-server-auth --watch port 9999",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,6 +47,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "json-server": "^1.0.0-alpha.23",
+    "json-server-auth": "^2.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
