api login/register

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "json-server db.json ./node_modules/json-server-auth --watch port 9999",
+    "server": "json-server-auth db.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
-    "json-server": "^1.0.0-alpha.23",
+    "json-server": "^0.17.3",
     "json-server-auth": "^2.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
